[build-system]
requires = [
    "scikit-build-core",
    "setuptools-scm",
    "numpy>=1.19.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "nanovdb_editor"
dynamic = ["version"]
description = "NanoVDB Editor Python Module"
authors = [
    {name = "The OpenVDB Project contributors"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy<2.3.0,>=2",  # compatibility with opencv-python 4.12.0.88
]

[project.urls]
Homepage = "https://github.com/AcademySoftwareFoundation/openvdb"
Repository = "https://github.com/AcademySoftwareFoundation/openvdb"
Documentation = "https://openvdb.org/documentation/"

[tool.scikit-build]
build-dir = "build/{wheel_tag}-{build_type}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.cmake]
source-dir = ".."
args = [
    "-DSKBUILD=ON",
    "-DNANOVDB_EDITOR_USE_GLFW=OFF",
]
