[build-system]
requires = [
    "scikit-build-core",
    "numpy>=1.19.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "nanovdb_editor"
version = "0.0.1"
description = "NanoVDB Editor Python Module"
authors = [
    {name = "The OpenVDB Project contributors"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/phapalova/nanovdb-editor"
Repository = "https://github.com/phapalova/nanovdb-editor"
Documentation = "https://github.com/phapalova/nanovdb-editor/tree/main/pymodule"

[tool.scikit-build]
build-dir = "build/{wheel_tag}-{build_type}"

[tool.scikit-build.cmake]
source-dir = ".."
args = [
    "-DSKBUILD=ON",
    "-DNANOVDB_EDITOR_USE_GLFW=OFF",
]
